--- a/public/assets/css/global-style.css
+++ b/public/assets/css/global-style.css
@@ -2,3 +2,7 @@ button:disabled {
     filter: grayscale(1);
     transition: 0.1s ease;
 }
+
+.alert {
+    transition: 0.1s ease-out, transform 0.5s ease-in-out;
+}
